<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper1"
    android:scaleType="centerCrop"
    android:orientation="vertical"
    tools:context="com.example.android.justjava.MainActivity">
    <EditText
        style="@style/CustomText"
        android:hint="@string/name"
        android:inputType="text"
        android:id="@+id/name_box"/>
    <TextView
        style="@style/CustomText"
    android:text="@string/toppings"
    android:textAllCaps="true"
    android:textColor="@android:color/black"/>

        <CheckBox
            style="@style/CustomText"
            android:onClick="toppings"
            android:text="@string/whipped_cream"
            android:paddingLeft="24dp"
            android:id="@+id/whipped_cream"
            android:textColor="@android:color/black" />
        <CheckBox
            style="@style/CustomText"
            android:text="@string/chocolate"
            android:paddingLeft="24dp"
            android:textColor="@android:color/black"
            android:id="@+id/chocolate_check_box"
            android:onClick="chocolate"/>
    <TextView
        style="@style/CustomText"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textColor="@android:color/black"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            style="@style/CustomButton"
            android:text="-"
            android:onClick="decrement"/>
        <TextView
            style="@style/CustomText"
            android:id="@+id/quantity_text_view"
            android:text="1"
            android:textColor="@android:color/black"
            android:layout_margin="8dp"
            android:onClick="decrement"/>
        <Button
            style="@style/CustomButton"
            android:text="+"
            android:onClick="increment"/>
    </LinearLayout>
    <Button
        style="@style/CustomText"
        android:text="@string/order"
        android:onClick="submitOrder"/>
    </LinearLayout>
</ScrollView>
